--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,4 +24,5 @@ Body: <%= @post.body %></br>
 
   <br/>
   <%= f.submit (@comment.persisted? ? 'Update comment' : 'Create comment') %>
+    <%= f.hidden_field :user_id, value: current_user.try(:id) %>
 <% end %>
