--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,6 +7,7 @@
   <%= f.text_field :title %>
   <br/>Body:
   <%= f.text_area :body %>
+  <%= f.hidden_field :user_id, value: current_user.try(:id) %>
 
   <br/>
   <%= f.submit (@post.persisted? ? 'Update post' : 'Create post') %>
